# BibLaTeX-Linter

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
biblatex_linter.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
core/: settings.py  urls.py  wsgi.py
linting/: views.py
linting/templates/: base.html  index.html  results.html
